--- a/index.html
+++ b/index.html
@@ -15,15 +15,34 @@
   </style>
 </head>
 <body>
+    <div class="wrapper">
+        <img src="/images/image-equilibrium.jpg">
 
-  Equilibrium #3429
+        <div class="equili">
+          <h2>Equilibrium #3429</h2>
+          <p>Our Equilibrium collection promotes balance and calm.</p>
+        </div>
 
-  Our Equilibrium collection promotes balance and calm.
+        <section>
+          <div class="eth">
+            <svg width="11" height="18" xmlns="http://www.w3.org/2000/svg"><path d="M11 10.216 5.5 18 0 10.216l5.5 3.263 5.5-3.262ZM5.5 0l5.496 9.169L5.5 12.43 0 9.17 5.5 0Z" fill="#00FFF8"/></svg>
+            <h3>0.041 ETH</h3>
+          </div>
+          <div class="days">
+            <svg width="17" height="17" xmlns="http://www.w3.org/2000/svg"><path d="M8.305 2.007a6.667 6.667 0 1 0 0 13.334 6.667 6.667 0 0 0 0-13.334Zm2.667 7.334H8.305a.667.667 0 0 1-.667-.667V6.007a.667.667 0 0 1 1.334 0v2h2a.667.667 0 0 1 0 1.334Z" fill="#8BACD9"/></svg>
+            <h4>3 days left</h4>          
+          </div>
+        </section>
 
-  0.041 ETH
-  3 days left
-  
-  Creation of Jules Wyvern
+        <div class="last-section">
+          <hr>
+          <div class="creation">
+            <img src="/images/image-avatar.png">
+            <h3>Creation of Jules Wyvern</h3>
+          </div>
+        </div>
+    </div>
+
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
