I added class of line to my hr tag

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </section>
 
         <div class="last-section">
-          <hr>
+          <hr class="line">
           <div class="creation">
             <img src="/images/image-avatar.png">
             <h3>Creation of Jules Wyvern</h3>
