I added two more containers in the index.html, and had to style it in style.css

--- a/index.html
+++ b/index.html
@@ -15,14 +15,16 @@
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
-<body>
-    <div class="wrapper">
-        <img height="100%" width="100%" src="/images/image-equilibrium.jpg">
+<body>  
+    <div class="container-main">
+     <div class="container-one">
+        <div class="wrapper">
+          <img height="100%" width="100%" src="/images/image-equilibrium.jpg">
 
-        <div class="equili">
-          <h2>Equilibrium #3429</h2>
-          <p>Our Equilibrium collection promotes balance and calm.</p>
-        </div>
+          <div class="equili">
+            <h2>Equilibrium #3429</h2>
+            <p>Our Equilibrium collection promotes balance and calm.</p>
+          </div>
 
         <section>
           <div class="eth-days">
@@ -34,16 +36,20 @@
               <h4>3 days left</h4>
             </div>
           </div>
-          
         </section>
+      
 
-        <div class="last-section">
-          <hr class="line">
+         <div class="last-section">
+            <hr class="line">
           <div class="creation">
-            <img src="/images/image-avatar.png">
-            <h3>Creation of Jules Wyvern</h3>
+            <div class="circle">
+              <img height="40px" width="40px" src="/images/image-avatar.png">
+            </div>
+            <h3>Creation of <span>Jules Wyvern</span> </h3>
           </div>
         </div>
+        </div>
+      </div>
     </div>
 </body>
 </html>
