--- a/index.html
+++ b/index.html
@@ -50,10 +50,12 @@
         </div>
         </div>
       </div>
+      <footer>
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+        Coded by <a href="#">Your Name Here</a>. 
+    </footer>
     </div>
+    
 </body>
+
 </html>
-<div id="attribution">
-  Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-  Coded by <a href="#">Your Name Here</a>.
-</div> 
