--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       </div>
       <footer>
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-        Coded by <a href="#">Your Name Here</a>. 
+        Coded by <a target="_blank" href="https://www.youtube.com/@Mr.P_koncept">Prince Ejike</a>. 
     </footer>
     </div>
     
